syntax = "proto3";
package analytics;

message CallTreeNode {
  uint32 hash = 1;
  double begin_ms = 2;
  double end_ms = 3;
  repeated CallTreeNode children = 4;
}

message ScopeDesc {
  string name = 1;
  string filename = 2;
  uint32 line = 3;
  uint32 hash = 4;
}

message CallTree {
  map<uint32, ScopeDesc> scopes = 1;
  CallTreeNode root = 2;
}